<resources>
    <string name="app_name">closet</string>
    <string name="title_activity_maps">Map</string>
    <string name="text_toilets">Toilets</string>
    <string name="text_recents">Recents</string>
    <string name="text_most_viewed">Most Viewed</string>
    <string name="text_search">Search</string>
    <string name="search_hint">Hint</string>
    <string name="text_more">More</string>
    <string name="app_label">Search</string>
    <string name="toilet_name">Name</string>
    <string name="toilet_rating">Rating</string>
    <string name="toilet_status">Status</string>
    <string name="toilet_open">Open</string>
    <string name="toilet_close">Close</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
</resources>
