<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:showIn="@layout/new_toilet">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scrollbarThumbVertical="@drawable/scrollbar"
        android:scrollbarSize="10dip"
        android:paddingLeft="15dip"
        android:paddingStart="15dp"
        >
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:textColor="@color/black">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/monday"/>
            <Switch
                android:id="@+id/switch0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:checked="false"/>
            <GridLayout android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:columnCount="2"
                android:layout_columnSpan="2"
                android:id = "@+id/time1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/toilet_open"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/toilet_close"/>
                <TimePicker
                    android:id="@+id/timePicker00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:timePickerMode="spinner" />
                <TimePicker
                    android:id="@+id/timePicker01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:timePickerMode="spinner" />
            </GridLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/tuesday"/>
            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:checked="false"/>
            <GridLayout android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:columnCount="2"
                android:layout_columnSpan="2"
                android:id = "@+id/time2">
                <TextView
                    android:layout_width="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/toilet_open"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/toilet_close"/>
                <TimePicker
                    android:id="@+id/timePicker10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:timePickerMode="spinner" />
                <TimePicker
                    android:id="@+id/timePicker11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:timePickerMode="spinner" />
            </GridLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/wednesday"/>
            <Switch
                android:id="@+id/switch2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:checked="false"/>
            <GridLayout android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:columnCount="2"
                android:layout_columnSpan="2"
                android:id = "@+id/time3">
                <TextView
                    android:layout_width="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/toilet_open"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/toilet_close"/>
                <TimePicker
                    android:id="@+id/timePicker20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:timePickerMode="spinner" />
                <TimePicker
                    android:id="@+id/timePicker21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:timePickerMode="spinner" />
            </GridLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/thursday"/>
            <Switch
                android:id="@+id/switch3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:checked="false"/>
            <GridLayout android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:columnCount="2"
                android:layout_columnSpan="2"
                android:id = "@+id/time4">
                <TextView
                    android:layout_width="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/toilet_open"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/toilet_close"/>
                <TimePicker
                    android:id="@+id/timePicker30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:timePickerMode="spinner" />
                <TimePicker
                    android:id="@+id/timePicker31"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:timePickerMode="spinner" />
            </GridLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/friday"/>
            <Switch
                android:id="@+id/switch4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:checked="false"/>
            <GridLayout android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:columnCount="2"
                android:layout_columnSpan="2"
                android:id = "@+id/time5">
                <TextView
                    android:layout_width="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/toilet_open"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/toilet_close"/>
                <TimePicker
                    android:id="@+id/timePicker40"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:timePickerMode="spinner" />
                <TimePicker
                    android:id="@+id/timePicker41"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:timePickerMode="spinner" />
            </GridLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/saturday"/>
            <Switch
                android:id="@+id/switch5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:checked="false"/>
            <GridLayout android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:columnCount="2"
                android:layout_columnSpan="2"
                android:id = "@+id/time6">
                <TextView
                    android:layout_width="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/toilet_open"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/toilet_close"/>
                <TimePicker
                    android:id="@+id/timePicker50"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:timePickerMode="spinner" />
                <TimePicker
                    android:id="@+id/timePicker51"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:timePickerMode="spinner" />
            </GridLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/sunday"/>
            <Switch
                android:id="@+id/switch6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:checked="false"/>
            <GridLayout android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:columnCount="2"
                android:layout_columnSpan="2"
                android:id = "@+id/time7">
                <TextView
                    android:layout_width="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/toilet_open"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/toilet_close"/>
                <TimePicker
                    android:id="@+id/timePicker60"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:timePickerMode="spinner" />
                <TimePicker
                    android:id="@+id/timePicker61"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:timePickerMode="spinner" />
            </GridLayout>
        </GridLayout>
    </ScrollView>

</LinearLayout>
